--- a/package.json
+++ b/package.json
@@ -11,27 +11,35 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@next/third-parties": "^15.3.2",
-    "@supabase/supabase-js": "^2.43.5",
+    "@react-google-maps/api": "^2.20.7",
+    "@supabase/supabase-js": "^2.50.0",
+    "@svgr/webpack": "^8.1.0",
     "@use-gesture/react": "^10.3.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "geolib": "^3.3.4",
+    "lucide-react": "^0.518.0",
     "motion": "^12.15.0",
     "next": "14.1.4",
     "openai": "^4.46.0",
     "pretendard": "^1.3.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
     "@svgr/webpack": "^8.1.0",
     "@types/classnames": "^2.3.1",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "@types/react-dom": "^18.2.18",
